--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsytk1RVZQfAR9OhX3o6_UAoO7FSVyGO4&libraries=places"
-    async
+    src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_KEY%&libraries=places"
     defer
     ></script>
   </head>
